# notflix-backend

./: .gitignore  Cargo.toml  README.image-magick.md  README.md  build.rs  diesel.toml  notflix-backend.example.cfg  rustfmt.toml
db/: schema.sql
doc/: api.md  database.md  database.sql
migrations/2022-01-30-121905_create_items/: up.sql
src/: api.rs  collections.rs  config.rs  data.rs  db.rs  genres.rs  id.rs  jvec.rs  kodifs.rs  lib.rs  main.rs  media.rs  models.rs  nfo.rs  parsefilename.rs  server.rs  sqlx.rs  util.rs
src/api/: collection.rs  image.rs  movie.rs  tvshow.rs  user.rs
src/db/: models.rs  schema.diesel.rs  schema.rs
src/kodifs/: episode.rs  mod.rs  movie.rs  movies.rs  nfo.rs  resource.rs  scandirs.rs  shows.rs  tvshow.rs  video.rs
src/models/: episode.rs  fileinfo.rs  image.rs  mediainfo.rs  mediaitem.rs  misc.rs  mod.rs  movie.rs  nfo.rs  season.rs  session.rs  thumb.rs  tvshow.rs  uniqueids.rs  user.rs  video.rs
