[package]
name = "notflix-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "notflix_backend"
path = "src/lib.rs"

[[bin]]
name = "notflix_backend"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
arc-swap = "1.5.0"
axum-server = "0.4.2"
axum = "0.5.4"
async-recursion = "1.0"
clap = "2.33"
curlyconf = "0.1.0"
env_logger = "0.9.3"
futures-core = "0.3.21"
futures-util = "0.3.21"
headers = "0.3"
http = "0.2"
http-body = "0.4.4"
log = "0.4.17"
once_cell = "1.9.0"
regex = "1.5.4"
scan_fmt = "0.2.6"
serde = { version = "1.0.114", features = [ "derive" ] }
serde_json = "1.0"
serde-xml-rs = "0.5.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
structopt = "0.3.14"
time = { version = "0.3.7", features = [ "local-offset" ] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.11", features = [ "filter" ] }
tower-http = { version = "0.3.2", features = [ "trace", "cors", "compression-gzip", "compression-deflate" ] }
#tracing = "0.1"
#tracing-subscriber = { version="0.3", features = ["env-filter"] }
url = "2.2.2"

mp4lib = { version = "0.1", features = [ "axum-box-body"], path = "../mp4/mp4lib" }
async-trait = "0.1.58"

[build-dependencies]
anyhow = "1.0"
regex = "1.5.4"

# sqlx-macros.
[profile.dev.package.sqlx-macros]
opt-level = 3

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

