[package]
name = "notflix-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "notflix_backend"
path = "src/lib.rs"

[[bin]]
name = "notflix_backend"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
arc-swap = "1.5.0"
async-trait = "0.1.58"
async-recursion = "1.0"
chrono = { version = "0.4.23", features = ["std", "clock"] }
clap = "2.33"
curlyconf = "0.1.0"
futures-core = "0.3.21"
futures-util = "0.3.21"
headers = "0.3"
http = "0.2"
http-body = "0.4.4"
log = "0.4.17"
once_cell = "1.9.0"
poem = { version = "1.3.49", features = ["server", "rustls", "anyhow"] }
poem-openapi = { version = "2.0.20", features = ["swagger-ui", "rapidoc", "email"] }
regex = "1.5.4"
scan_fmt = "0.2.6"
serde = { version = "1.0.114", features = [ "derive" ] }
serde_json = "1.0"
serde-xml-rs = "0.5.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
url = "2.2.2"

mp4lib = { version = "0.1", features = [], path = "../mp4/mp4lib" }
async-stream = "0.3.3"
flume = "0.10.14"
slab = "0.4.7"
humantime-serde = "1.1.1"
serde_plain = "1.0.1"
sha-crypt = "0.4.0"
nanoid = "0.4.0"
image = "0.24.5"
rand = "0.8.5"

[build-dependencies]
anyhow = "1.0"
regex = "1.5.4"

# sqlx-macros.
[profile.dev.package.sqlx-macros]
opt-level = 3

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

# Include debug info even in release binaries.
[profile.release]
debug = true

