[package]
name = "notflix-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "notflix_backend"
path = "src/lib.rs"

[[bin]]
name = "notflix_backend"
path = "src/main.rs"

[features]
default = []
with-fast_image_resize = [ "fast_image_resize" ]
with-zune-jpeg = [ "zune-jpeg" ]
with-magick_rust = [ "magick_rust" ]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
arc-swap = "1.5.0"
arraystring = { version = "0.3.0", features = ["serde-traits"] }
async-recursion = "1.0"
async-stream = "0.3.3"
async-trait = "0.1.58"
chrono = { version = "0.4.23", features = ["std", "clock"] }
clap = "2.33"
curlyconf = "0.1.0"
fast_image_resize = { version = "2.2.0", optional = true }
flume = "0.10.14"
futures-core = "0.3.21"
futures-util = "0.3.21"
headers = "0.3"
http = "0.2"
http-body = "0.4.4"
humantime-serde = "1.1.1"
image = "0.24.5"
log = "0.4.17"
magick_rust = { version = "0.16.0", features = ["disable-hdri"], optional = true }
once_cell = "1.9.0"
poem = { version = "1.3.49", features = ["server", "rustls", "anyhow", "static-files"] }
poem-openapi = { version = "2.0.20", features = ["swagger-ui", "rapidoc", "email"] }
rand = "0.8.5"
regex = "1.5.4"
scan_fmt = "0.2.6"
serde = { version = "1.0.114", features = [ "derive" ] }
serde-xml-rs = "0.5.1"
serde_json = "1.0"
serde_plain = "1.0.1"
sha-crypt = "0.4.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
typenum = "1.15.0"
url = "2.2.2"
zune-jpeg = { version = "0.2.0", optional = true }

mp4lib = { version = "0.1", features = ["hyper-body"], path = "../mp4/mp4lib" }

[build-dependencies]
anyhow = "1.0"
regex = "1.5.4"

# sqlx-macros.
[profile.dev.package.sqlx-macros]
opt-level = 3

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

# Include debug info even in release binaries.
[profile.release]
debug = true

